* You can now (plugin, skin, whatever...) add your own credits to the bottom of each page, without having to hack into language files. Beware! If $context['custom_credits'] is abused, I'll add some code to prevent it from getting too large. Push your credits to the credits page, that's where they should be, really. (index.template.php)
* The reqWin animation was a bit too over-the-top when the popup grew in size. Made it a bit more... respectable, say. (index.css)

* On focus, a button should still show some recognizable outline. This week's contribution of mine to accessibility. (index.css)

- Removed a rogue period. Oh, my, now I absolutely need, want to restore it... What's happening to me?! (index.language.php)

- Removed wedge.org-specific code from the index template, at last. (index.template.php)

- Removed a duplicate declaration. Thanks John! (Post.php)

- Removed some hardcoded styles. If these things ever get in the way, well... I'll look into it. There's one remaining in the Display template, but it's scheduled for next commit... (MessageIndex.template.php, Recent.template.php)

--- a/Themes/default/skins/index.css
+++ b/Themes/default/skins/index.css
@@ -750,7 +750,7 @@ input[type=submit], input[type=button]
 	@if ie6, ie7
 		overflow: visible
 	@endif
-	:hover
+	:hover, :focus
 		transition: all .3s ease
 		box-shadow: inset 1px 1px #fff, inset 25px 0 25px rgba(0,0,0, .04), 0 1px 2px rgba(0,0,0, .2)
 
@@ -1703,10 +1703,10 @@ dl#feed
 		position: absolute
 
 #helf
-	transform: perspective(500px) translateY(-20px) rotateX(-20deg)
+	transform: perspective(1000px) translateY(-20px) rotateX(-20deg)
 	transition: transform .3s ease
 	&.show
-		transform: perspective(500px)
+		transform: perspective(1000px)
 		transition: transform .8s ease
 	header extends .wehead
 		padding: 8px
